# email-organizer

./: .env_example  ENVIRONMENT.md  README.md  app.py  model_config.json  pyproject.toml  requirements.txt  xconfig.py
docs/: Instructions.md
prompts/: llama2_example_prompt.txt  llama2_main_prompt.txt  llama2_system_prompt.txt
src/: agent.py  embedders.py  llama_agent.py  manager.py  message.py  prompts.py  request_adapter.py  topic_labels.py  topic_model_factory.py  util.py
src/commands/: collect_and_store.py  create_inbox_folders.py  review_and_categorize.py  train_topic_model.py
src/tests/: test_agent.py
