[tool.poetry]
name = "scraper-agent"
version = "0.1.0"
description = "Agent AI to help with Web Scraping tasks"
authors = ["Khalen Fredieu"]
readme = "README.md"
packages = [ {include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
typer = "^0.15.1"
beautifulsoup4 = "^4.12.3"
azure-identity = "^1.19.0"
msgraph-sdk = "^1.18.0"
pymongo = "^4.11"
transformers = {extras = ["torch"], version = "^4.48.2"}
torch = "^2.6.0"
scikit-learn = "^1.6.1"
sentence-transformers = "^3.4.1"
pandas = "^2.2.3"
spacy = "^3.8.4"
numpy = "2.1"
ipython = "^8.32.0"
loguru = "^0.7.3"
bitsandbytes = "^0.45.2"
xformers = "^0.0.29.post2"
adjusttext = "^1.3.0"
pydantic = "^2.10.6"
protobuf = "^5.29.3"
safetensors = "^0.5.2"
datasets = "^3.2.0"
jupyterlab = "^4.3.5"
voyageai = "^0.3.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
