[project]
name = "email-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bertopic",
    "datasets",
    "gguf>=0.14.0",
    "huggingface-hub[cli]>=0.29.2",
    "jupyterlab>=4.3.5",
    "loguru>=0.7.3",
    "msgraph-sdk>=1.23.0",
    "numpy>=1.17,<3.0.0",
    "numba>=0.56.4",
    "pymongo>=4.11.2",
    "sentence-transformers>=3.4.1",
    "typer>=0.15.2",
    "voyageai>=0.3.2",
    "llama-cpp-python>=0.3.7",
]
